# ChatNCT

./: .gitattributes  .gitignore  Dockerfile  Documentation.md  README.md  app.py  deploy_frontend_updater.py  generate_debug_images.py  implementation_plan.md  push_error.txt  render.yaml  requirements.txt  requirments.txt  routing_implementation_plan.md  run.py  run_production.py  server.py  sessions.db  system_map.json
.github/workflows/: sync-to-hf.yml
frontend/: attendance.html  chat.html  dashboard.html  index.html  instructor.html  prompt.html
mainAgent/: agent.py
mainAgent/sub_agents/marwan/: pyproject.toml
mainAgent/sub_agents/marwan/study_agent/: agent.py  tools.py
mainAgent/sub_agents/marwan/study_agent/.adk/: session.db
mainAgent/sub_agents/marwan/study_agent/materials/: C++ Lecture 1.txt  C++ Lecture 3.txt  C++ Lecture 4.txt  C++ Lecture 5.txt  DataBase - lecture 1.txt  DataBase - lecture 2.txt  DataBase - lecture 3.txt  DataBase - lecture 4.txt  DataBase - lecture 5.txt  DataBase - lecture 6.txt  IT Essential Lectur1.txt  IT Essential Lectur3.txt  IT Essential Lectur4.txt  IT Essential Lectur5.txt  IT Essential Lectur6.txt  Linux Essentials - Lecture 5.txt  Linux Essentials - Lecture 6.txt  Operating System - Lecture 1.txt  Operating System - Lecture 2.txt  Operating System - Lecture 3.txt  Operating System - Lecture 5.txt
php_backend/: Documentation.md  dashboard.html  index.html
scratch/: agent_direct_response.txt  db_output.txt  session_messages.txt  test_agent_response.py  test_dr_hala.py  test_raw_agent.py  view_latest_messages.py
(+162 files in other folders)
